@@ -5,9 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+        <version>2.7.18</version> <relativePath/> </parent>
     <groupId>net.thekingofduck</groupId>
     <artifactId>loki</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -31,8 +29,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
+            <version>1.18.30</version> <scope>provided</scope> </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -103,12 +100,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                </configuration>
+                <version>3.11.0</version> <configuration>
+                <source>17</source>
+                <target>17</target>
+                <compilerArgs>
+                    <arg>--add-opens</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    <arg>--add-opens</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                    <arg>--add-opens</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                    <arg>--add-opens</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                    <arg>--add-opens</arg>  <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                </compilerArgs>
+            </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
